--- a/CentralizedTorrentSocialNetwork/client/html/css/style.css
+++ b/CentralizedTorrentSocialNetwork/client/html/css/style.css
@@ -1,5 +1,6 @@
 @import url("root.css");
 @import url("div.css");
+@import url("btn.css");
 
 body {
   margin: 0;
@@ -43,4 +44,14 @@ body {
 
 #debug {
   margin-left: 0.5%;
+}
+
+h4 {
+  margin-bottom: 0.2vh;
+  margin-top: 0.2vh;
+}
+
+#page {
+  width: 60%;
+  height: 77vh;
 }
